[gd_scene load_steps=4 format=3 uid="uid://go6rcdu1plis"]

[ext_resource type="Script" uid="uid://cegu1povo4emk" path="res://scripts/launch_pad.gd" id="1_0xpjp"]
[ext_resource type="Texture2D" uid="uid://ixl2jvoasofm" path="res://assets/helipad.png" id="1_rf4ly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xpjp"]

[node name="LaunchPad" type="Area2D"]
process_mode = 3
script = ExtResource("1_0xpjp")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_rf4ly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_0xpjp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
